--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "repository": {
+	"type" : "git",
+	"url" : "https://github.com/XXunn/xchessxun.git"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
